--- a/travel_together_app/travel_together/templates/main/trip.html
+++ b/travel_together_app/travel_together/templates/main/trip.html
@@ -59,7 +59,13 @@
 <div class="single_trip_container">
   <img class="trip-photo" src="{{ url_for('static', filename='resources/example-trip-1.jpg') }}" alt="Avatar">
   <h2 class="trip-title">{{ trip.title }}</h2>
-  <button id="modify-trip-button">Modify Trip</button>
+  
+  {% if current_user.is_editor_for(trip) %}
+    <a href="{{url_for('auth.edit_profile')}}">
+      <button id="modify-trip-button">Modify Trip</button>
+    </a>
+  {% endif %}
+
   <p class="trip-time-created">Created {{ trip.timestamp|time_ago }} by
     <a href="{{ url_for('main.profile', user_id=trip.creator.id) }}" style="text-decoration: none; color: inherit;">
       {{ trip.creator.name }}
@@ -113,8 +119,7 @@
     <p class="cannot-join-alerts">This trip is not open now, as is not taking new members.</p>
     {% endif %}
 
-    {% if not (trip.participants|length >= max_travelers) or (current_user.age < min_age and current_user.age> max_age)
-      %}
+    {% if not (trip.participants|length >= max_travelers) or (current_user.age < min_age and current_user.age> max_age) %}
       {% if not already_joined %}
       <form action="{{ url_for('main.join_trip', trip_id=trip.id) }}" method="POST">
         <button type="submit">Join Trip!</button>
