--- a/travel_together_app/travel_together/templates/trip_template.html
+++ b/travel_together_app/travel_together/templates/trip_template.html
@@ -1,13 +1,27 @@
 <a class="trip-link" href="{{ url_for('main.trip', trip_id=trip.id) }}">
     <div class="trip-container">
-        <img class="trip-photo" src="../static/resources/example-trip-1.jpg" alt="Avatar">
-        <h2 class="trip-title">{{ trip.title }}</h2>    
-        <p class="trip-time-created">Created {{ trip.timestamp|time_ago }} by {{ trip.creator.name }}</p>
-        <p class="trip-description">{{ trip.description }}</p>
-        <p class="trip-origin">Origin: {{ trip.origin }}</p>
-        <p class="trip-destinations">Destination(s): {{ trip.destinations }}</p>
+        <div class="trip-item"
+             data-budget="{{ trip.budget or 0 }}"
+             data-start="{{ trip.start_date.strftime('%Y-%m-%d') }}"
+             data-end="{{ trip.end_date.strftime('%Y-%m-%d') }}"
+             data-min-age="{{ trip.min_age or 0 }}"
+             data-max-age="{{ trip.max_age or 999 }}"
+             data-origin="{{ trip.origin|lower }}"
+             data-destinations="{{ trip.destinations|lower }}"
+             data-current-participants="{{ trip.participants|length }}"
+             data-max-travelers="{{ trip.max_travelers or 999 }}"
+             data-status="{{ trip.status }}">
+            
+            <img class="trip-photo" src="../static/resources/example-trip-1.jpg" alt="Avatar">
+            <h2 class="trip-title">{{ trip.title }}</h2>    
+            <p class="trip-time-created">Created {{ trip.timestamp|time_ago }} by {{ trip.creator.name }}</p>
+            <p class="trip-description">{{ trip.description }}</p>
+            <p class="trip-origin">Origin: {{ trip.origin }}</p>
+            <p class="trip-destinations">Destination(s): {{ trip.destinations }}</p>
+        </div>
     </div>
 </a>
+
 
 
 
