--- a/travel_together_app/travel_together/static/css/index.css
+++ b/travel_together_app/travel_together/static/css/index.css
@@ -45,7 +45,7 @@
     width: 50%;
 }
 
-/*BUTTONS*/
+/*============================== BUTTONS ===============================*/
 
 .trapezoid-overlay button {
     width: 15vw;
@@ -105,4 +105,61 @@
     height: calc(100% - 60px - 0.2vh); 
     overflow: auto; 
     background-color: rgba(0,0,0,0.3); 
+}
+
+/*======================= BROWSE TRIPS FILTERS ========================== */
+
+#trip-filters {
+    margin: 5vh auto;
+    width: 70vw;
+    padding: 3vh 4vw;
+
+    background-color: white;
+    border-radius: 20px;
+
+    display: flex;
+    flex-direction: column;
+    gap: 2vh;
+
+    box-shadow: 2px 2px 10px rgba(0,0,0,1);
+}
+
+#trip-filters form {
+    display: flex;
+    flex-direction: column;
+    gap: 1vh;
+    width: 100%;
+}
+
+#trip-filters label {
+    font-weight: bold;
+    font-size: 1.5rm;
+}
+
+#trip-filters input {
+    width: 100%;
+    height: 25px;
+}
+
+#trip-filters button {
+    flex:1;
+    font-size: 1vw;
+    width: auto;
+    padding: 0.5vw;
+    background-color: #D6C6AF;
+    border-radius: 15px;
+    border: 1px solid #ccc;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+    cursor: pointer;
+    transition: all 0.1s ease-in-out;
+}
+
+#trip-filters button:hover {
+    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.3);
+    transform: translateY(-2px);
+}
+
+#trip-filters button:active {
+    box-shadow: inset 2px 2px 5px rgba(0, 0, 0, 0.2);
+    transform: translateY(2px);
 }
