status filter for browse trips

--- a/travel_together_app/travel_together/templates/main/browse_trips.html
+++ b/travel_together_app/travel_together/templates/main/browse_trips.html
@@ -62,6 +62,15 @@
         <label>Destination:</label>
         <input type="text" id="destination-filter" name="destination" placeholder="Enter somewhere you'd like to visit...">
 
+        <label>Trip Status: </label>
+        <select id="status-filter" name="status">
+          <option value="OPEN">OPEN</option>
+          <option value="APPROVAL_REQUIRED">APPROVAL_REQUIRED</option>
+          <option value="CLOSED">CLOSED</option>
+          <option value="FINALIZED">FINALIZED</option>
+          <option value="CANCELLED">CANCELLED</option>
+        </select>
+
         <button type="submit">Filter Trips</button>
     </form>
     <br>
