--- a/travel_together_app/travel_together/templates/main/trip.html
+++ b/travel_together_app/travel_together/templates/main/trip.html
@@ -3,6 +3,8 @@
 {% block head %}
 {{ super() }}
 <link rel="stylesheet" href="{{ url_for('static', filename='css/trip.css') }}"/>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
 {% endblock %}
 
 {% block content %}
@@ -10,6 +12,11 @@
 {% set min_age = trip.min_age or 0 %}
 {% set max_age = trip.max_age or 200 %}
 <div class="top-container">
+  <div class="back-arrow">
+    <a href="{{ url_for('main.index') }}">
+      <h2>← Main Page</h2>
+    </a>
+  </div>
   <div class="trip-photo-container">
     <img src="{{ url_for('static', filename='resources/example-trip-2.jpg') }}" id="trip-bg" alt="Trip photo">
     <div class="trip-title-wrapper">
@@ -23,43 +30,50 @@
     </div>
     <div class="details">
       <div class="trip-info">
-        <p class="trip-origin">Origin: {{ trip.origin }}</p>
-        <p class="trip-destinations">Destination(s): {{ trip.destinations.replace(',', ', ') }}</p>
-        {% if max_travelers != 999999 and max_travelers > 0 %}
-          <p class="member-amount-details">Member Capacity: {{ trip.participants|length }}/{{ max_travelers }}</p>
-        {% else %}
-          <p class="member-amount-details">This trip has no specified member capacity.</p>
-        {% endif %}
-        {% if trip.participants|length >= max_travelers %}
-          <p class="cannot-join-alerts">This trip is full, and is currently not accepting new members.</p>
+        <p class="trip-origin">Origin: <span class="criteria">{{ trip.origin }}</span></p>
+        <p class="trip-destinations">Destination(s): <span class="criteria">{{ trip.destinations.replace(',', ', ') }}</span></p>
+        {% if max_travelers != 999999 and max_travelers > 0 and trip.participants|length < max_travelers %}
+        <p>Member Capacity: <span class="criteria">{{ trip.participants|length }}/{{ max_travelers }} </span><span class="open-members-popup">(view)</span></p>
+        {% elif trip.participants|length >= max_travelers%}
+        <p>Member Capacity: <span class="criteria red">{{ trip.participants|length }}/{{ max_travelers }}</span></p>
         {% endif %}
         {% if current_user.age < min_age or current_user.age > max_age %}
-          <p class="cannot-join-alerts">You are not within the specified age range for this trip.</p>
+        <p>Age range: <span class="criteria red">{{min_age}} to {{max_age}} years old</span></p>
+        {% else %}
+        <p>Age range: <span class="criteria">{{min_age}} to {{max_age}} years old</span></p>
         {% endif %}
         {% if trip.budget and trip.budget > 0 %}
-          <p class="trip-budget">Trip Budget: {{ trip.budget }}</p>
+        <p>Trip Budget: <span class="criteria">€{{ trip.budget }}</span></p>
         {% endif %}
-        <p class="trip-date-range">Planned Date Range: {{ trip.start_date.strftime('%B %d, %Y') }} to {{ trip.end_date.strftime('%B %d, %Y') }}</p>
-        {% if trip.status != 0 %}
-        <p class="cannot-join-alerts">This trip is not open now and not taking new members.</p>
+        <p>Planned Date Range: <span class="criteria">{{ trip.start_date.strftime('%B %d, %Y') }} to {{ trip.end_date.strftime('%B %d, %Y') }}</span></p>
+        {% set status_map = {0: 'Open for joining', 1: 'Open (approval required)', 2: 'Closed', 3: 'Finalized', 4: 'Canceled'} %}
+        {% if trip.status == 0 %}
+        <p>Status:<span class="criteria green"> {{ status_map[trip.status] }}</span></p>
+        {% elif trip.status == 1 %}
+        <p>Status:<span class="criteria yellow"> {{ status_map[trip.status] }}</span></p>
+        {% else %}
+        <p>Status:<span class="criteria red"> {{ status_map[trip.status] }}</span></p>
         {% endif %}
-
       </div>
      
 
-      <div class="buttons">
+      <div class="button-container">
         {% if already_joined %}
-        <button id="modify-trip-button">Modify Trip</button>
+          <button id="modify-trip-button" class="trip-button">Modify Trip</button>
         {% endif %}
         {% if trip.participants|length < max_travelers and current_user.age >= min_age and current_user.age <= max_age %}
           {% if not already_joined %}
           <form action="{{ url_for('main.join_trip', trip_id=trip.id) }}" method="POST">
-            <button type="submit">Join Trip!</button>
+            <button type="submit" class="trip-button">Join Trip!</button>
           </form>
           {% else %}
           <form action="{{ url_for('main.leave_trip', trip_id=trip.id) }}" method="POST">
-            <button type="submit">Leave trip</button>
+            <button type="submit" class="trip-button">Leave trip</button>
           </form>
+          {% endif %}
+        {% else %}
+          {% if not already_joined %}
+          <p><i>You're not eligible to join this trip at the moment.</i></p>
           {% endif %}
         {% endif %}
       </div>
@@ -67,115 +81,148 @@
   </div> 
 </div>
 
-<div>
-  <h2>Current Trip Members</h2>
-  {% for participant in trip.participants %}
-  <a href="{{ url_for('main.profile', user_id=participant.id) }}" style="text-decoration: none; color: inherit;">
-    <img src="{{ url_for('static', filename='resources/' ~ participant.profile_pic) }}" class="header-icon" />
-    <p>{{ participant.name }}</p>
-  </a>
-  {% endfor %}
-</div>
-
-{% if already_joined %}
-<div id="message-board-area" class="message-board-area">
-  <h2>Message Board</h2>
-  <h4>Chat With Your Tripmates</h4>
-  <div class="forums">
-    <div class="forum-tabs">
-      <a href="{{ url_for('main.trip', trip_id=trip.id, forum_topic='Main') }}#message-board-area">Main</a>
-      {% for topic in forum_topics %}
-        {% if topic != 'Main' %}
-          <a href="{{ url_for('main.trip', trip_id=trip.id, forum_topic=topic) }}#message-board-area">{{ topic }}</a>
-        {% endif %}
+<div id="members-popup" class="popup">
+  <div class="popup-content">
+    <span class="close">&times;</span>
+    <h2>Current Trip Members</h2>
+    <div class="participant-list">
+      {% for participant in trip.participants %}
+      <a class="single-participant" href="{{ url_for('main.profile', user_id=participant.id) }}">
+        <img src="{{ url_for('static', filename='resources/' ~ participant.profile_pic) }}" class="header-icon" />
+        <p>{{ participant.name }}</p>
+      </a>
       {% endfor %}
-      <button id="new-topic-button">Add New Topic...</button>
     </div>
   </div>
-  <div id="message-board" class="message-board">
-    <h4>{{ active_topic }}</h4>
-    <div class="messages-container">
-      {% if active_forum_messages %}
-        {% for message in active_forum_messages %}
-          <a href="{{ url_for('main.profile', user_id=message.user.id) }}" style="text-decoration: none; color: inherit;">
-            <img src="{{ url_for('static', filename='resources/' ~ message.user.profile_pic) }}" alt="Profile" class="header-icon" />
-            <div class="messages">
-              <p><strong>{{ message.user.name }}: {{ message.timestamp.strftime('%b %d, %Y, %H:%M') }}</strong></p>
+</div>
+
+<div class="page-contents">
+  {% if already_joined %}
+  <div id="message-board-area" class="message-board-area">
+    <div class="page-contents-header">
+      <h2>Message Board</h2>
+      <h4>Chat With Your Tripmates</h4>
+    </div>
+
+    <div class="forums">
+      <div class="forum-tabs">
+        {% for topic in forum_topics %}
+        {% if topic==active_topic %}
+        <a class="topic active-topic" href="{{ url_for('main.trip', trip_id=trip.id, forum_topic=topic) }}#message-board-area">{{ topic }}</a>
+        {% else %}
+        <a class="topic" href="{{ url_for('main.trip', trip_id=trip.id, forum_topic=topic) }}#message-board-area">{{ topic }}</a>
+        {% endif %}
+        {% endfor %}
+        <button id="new-topic-button">+</button>
+        <div class="tab-spacer"></div>
+      </div>
+      <div class="chat-wrapper">
+        <div class="messages-container">
+          {% if active_forum_messages %}
+            {% for message in active_forum_messages %}
+            {% if message.user_id==current_user.id %}
+            <div class="message-container sent-message">
+            {% else %}
+            <div class="message-container received-message">
+            {% endif %}
+              <div class="message-header">
+                <a class="message-header" href="{{ url_for('main.profile', user_id=message.user.id) }}" style="text-decoration: none; color: inherit;">
+                  <img src="{{ url_for('static', filename='resources/' ~ message.user.profile_pic) }}" alt="Profile" class="header-icon" />
+                  <div class="message-info">
+                    <p><strong>{{ message.user.name }}</strong></p>
+                    <p>{{ message.timestamp.strftime('%b %d, %Y, %H:%M') }}</p>
+                  </div>
+                </a>
+              </div>
               <p>{{ message.content }}</p>
             </div>
-          </a>
-        {% endfor %}
-      {% else %}
-        <p>Write the first message for this forum...</p>
-      {% endif %}
-    </div>
-    <form action="{{ url_for('main.new_message', trip_id=trip.id) }}" method="post">
-      <input type="hidden" name="forum_topic" value="{{ active_topic }}" id="forum-topic-input" data-active-topic="{{ active_topic }}">
-      <div id="new-forum-topic-input" style="display: none">
-        <label>Name your new forum topic:</label>
-        <input type="text" name="new_forum_topic" placeholder="Enter new forum topic name..." maxlength="64">
-        <button type="button" id="cancel-new-forum-topic">Cancel</button>
+            {% endfor %}
+          {% else %}
+          <p>Write the first message for this forum...</p>
+          {% endif %}
+        </div>
       </div>
-      <textarea name="message-content" rows="4" cols="50" placeholder="What's on your mind?"></textarea>
+
+      <form action="{{ url_for('main.new_message', trip_id=trip.id) }}" method="post">
+        <input type="hidden" name="forum_topic" value="{{ active_topic }}" id="forum-topic-input" data-active-topic="{{ active_topic }}">
+
+        <div id="new-forum-topic-input" style="display: none">
+          <label>Name your new forum topic:</label>
+          <input type="text" name="new_forum_topic" placeholder="Enter new forum topic name..." maxlength="64">
+          <button type="button" id="cancel-new-forum-topic">Cancel</button>
+        </div>
+
+        <div class="send-message">
+          <textarea class="send-message-area" maxlength="200" name="message-content" placeholder="What's on your mind?"></textarea>
+          <button class="send-message-button" type="submit">Send</button>
+        </div>
+      </form>
+    </div>
+  </div>
+
+  <div class="calendar-wrapper">
+    <div class="page-contents-header">
+      <h2>Event Calendar</h2>
+      <h4>See What Events/Meetups Are Scheduled For This Trip</h4>
+    </div>
+    <div id="calendar"></div>
+  </div>
+
+  <div id="meetup-area">
+    <div class="meetup-area-content">
+      <h3>Create a Meetup...</h3>
+      <form id="meetup-form">
+        <div class="form-group">
+          <label>Location:</label>
+          <input type="text" name="location" required placeholder="e.g., School library or Zoom call">
+        </div>
+
+        <div class="form-group">
+          <label>Date:</label>
+          <input type="date" name="date" id="meetup-date" required>
+        </div>
+
+        <div class="form-group">
+          <label>Time:</label>
+          <input type="time" name="time" required>
+        </div>
+
+        <div class="form-group">
+          <label>Link (optional):</label>
+          <input type="text" name="link" placeholder="Add a link if needed...">
+          <small>Add a link for online meetings, such as Zoom, Google Meet, etc.</small>
+        </div>
+
+        <div class="form-group">
+          <label>Description:</label>
+          <textarea name="description" rows="5" maxlength="1024" required placeholder="Describe your meetup/event..."></textarea>
+        </div>
+
+        <div class="meetup-area-buttons">
+          <button type="button" id="cancel-meetup-creation-button">Cancel</button>
+          <button type="submit">Create Meetup</button>
+        </div>
+      </form>
+    </div>
+  </div>
+
+  <div id="existing-meetup-popup" class="existing-meetup-popup">
+    <div class="existing-meetup-popup-content">
+      <h3>Meetup Details</h3>
       <br>
-      <button type="submit">Send</button>
-    </form>
-  </div>
-</div>
+      <p><strong>Location: </strong><span id="detail-location"></span></p>
+      <p><strong>Description: </strong><span id="detail-description"></span></p>
+      <p><strong>Link: </strong><a id="detail-link" href="#" target="_blank"></a></p>
 
-<h2>Event Calendar</h2>
-<h4>See What Events/Meetups Are Scheduled For This Trip</h4>
-
-<div id="calendar"></div>
-
-<div id="meetup-area">
-  <div class="meetup-area-content">
-    <h3>Create a Meetup...</h3>
-    <form id="meetup-form">
-      <div class="form-group">
-        <label>Location:</label>
-        <input type="text" name="location" required placeholder="e.g., School library or Zoom call">
+      <div class="existing-meetup-popup-buttons">
+        <button id="open-link" style="display:none;">Open Link</button>
+        <button id="delete-event">Delete Event</button>
+        <button id="close-event">Close</button>
       </div>
-      <div class="form-group">
-        <label>Date:</label>
-        <input type="date" name="date" id="meetup-date" required>
-      </div>
-      <div class="form-group">
-        <label>Time:</label>
-        <input type="time" name="time" required>
-      </div>
-      <div class="form-group">
-        <label>Link (optional):</label>
-        <input type="text" name="link" placeholder="Add a link if needed...">
-        <small>Add a link for online meetings, such as Zoom, Google Meet, etc.</small>
-      </div>
-      <div class="form-group">
-        <label>Description:</label>
-        <textarea name="description" rows="5" maxlength="1024" required placeholder="Describe your meetup/event..."></textarea>
-      </div>
-      <div class="meetup-area-buttons">
-        <button type="button" id="cancel-meetup-creation-button">Cancel</button>
-        <button type="submit">Create Meetup</button>
-      </div>
-    </form>
-  </div>
-</div>
-
-<div id="existing-meetup-popup" class="existing-meetup-popup">
-  <div class="existing-meetup-popup-content">
-    <h3>Meetup Details</h3>
-    <br>
-    <p><strong>Location: </strong><span id="detail-location"></span></p>
-    <p><strong>Description: </strong><span id="detail-description"></span></p>
-    <p><strong>Link: </strong><a id="detail-link" href="#" target="_blank"></a></p>
-    <div class="existing-meetup-popup-buttons">
-      <button id="open-link" style="display:none;">Open Link</button>
-      <button id="delete-event">Delete Event</button>
-      <button id="close-event">Close</button>
     </div>
   </div>
+  {% endif %}
 </div>
-{% endif %}
 {% endblock %}
 
 {% block scripts %}
@@ -185,13 +232,8 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/6.1.8/index.global.min.js"></script>
 <script>
   var initialDateValue = "{{ trip.start_date.strftime('%Y-%m-%d') }}";
-  var tripId = "{{ trip.id }}"
+  var tripId = "{{ trip.id }}";
 </script>
 <script src="{{ url_for('static', filename='calendar.js') }}"></script>
 {% endif %}
-<div>
-  <a href="{{ url_for('main.index') }}">
-    <button type="submit">Return</button>
-  </a>
-</div>
 {% endblock %}
