--- a/travel_together_app/travel_together/templates/main/trip.html
+++ b/travel_together_app/travel_together/templates/main/trip.html
@@ -60,7 +60,7 @@
 
 {% block content %}
 <div class="single_trip_container">
-  <img class="trip-photo" src="{{ url_for('static', filename='resources/example-trip-1.jpg') }}" alt="Avatar">
+  <img class="trip-photo" src="{{ url_for('static', filename='resources/' ~ trip.image) }}" alt="{{ trip.title }}">
   <h2 class="trip-title">{{ trip.title }}</h2>
   
   {% if current_user.is_editor_for(trip) %}
