trip photo upload working i think

--- a/travel_together_app/travel_together/static/css/trips_template.css
+++ b/travel_together_app/travel_together/static/css/trips_template.css
@@ -23,7 +23,8 @@ a.trip-link {
 
 .trip-container img.trip-photo {
     width: 100%;
-    height: auto;
+    height: 13vw;
+    object-fit: cover;
     border-radius: 8px;
 }
 
