--- a/travel_together_app/travel_together/templates/main/edit_trip_form.html
+++ b/travel_together_app/travel_together/templates/main/edit_trip_form.html
@@ -177,6 +177,10 @@
                         </div>
                     </div>
                 </div>
+                <div class="single-entry3">
+                    <label class="trip-image">Trip Image: </label>
+                    <input type="file" id="trip_image" name="trip_image" accept="image/*">
+                </div>
                 <div class="pref-row finalize-row">
                     <label>
                         <input type="checkbox" name="finalize_age_to_join">
