--- a/travel_together_app/travel_together/templates/main/trip_form.html
+++ b/travel_together_app/travel_together/templates/main/trip_form.html
@@ -7,7 +7,7 @@
 
 
 {% block content %}<div id="formPopupModal">
-    <form id="trip-form" data-user-age="{{ current_user.age }}" action="{{ url_for('main.new_trip') }}" method="post">
+    <form id="trip-form" data-user-age="{{ current_user.age }}" action="{{ url_for('main.new_trip') }}" method="post" enctype="multipart/form-data">
         <h2 class="form-header">Create a travel proposal!</h2>
 
         <div class="form-step active-step" id="step-1">
